Changed information regarding RMO and FTSE

--- a/cv.tex
+++ b/cv.tex
@@ -205,7 +205,6 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
 
 \itemlist {
     \textsc{Jan 2011} & Kishore Vaigyanik Protsahan Yojana (KVPY) Fellowship \\
-    \textsc{Dec 2008} & FIITJEE Talent Reward Examination Scholarship \\
     \textsc{Dec 2009} & CSIR Programme on Youth for Leadership in Science held at Advanced Materials Research Institute, Bhopal\\
 }
 
@@ -225,11 +224,12 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
                             \textbf{Introduction to Philosophy} \\
     \textsc{2012-2013}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
     \textsc{2011-2012}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
-    \textsc{Jan 2010}    & Qualified for \textbf{Indian National Mathematics Olympaid} (INMO) \\
+    \textsc{Jan 2010}    & Qualified \textbf{Regional Mathematics Olympiad} (RMO) \\
     \textsc{May 2011}    & Secured All India rank \textbf{1937} in Joint Entrance Exam (JEE) \\
     \textsc{Sep 2010}    & \textbf{AIR 17} in \textbf{Technothlon} (Techniche) conducted by Indian Institute of Technology Guwahati. \\
     \textsc{Jun 2010}    & Earned \textbf{Top Scorer in English} by \textbf{Laurels School International} in ICSE 2009. \\
     \textsc{Dec 2009}    & Awarded \textbf{Overall Best Student} for displaying all round excellence. \\
+    \textsc{Dec 2008}    & Secured All India Rank 297 in FIITJEE Talent Reward Examination. \\
     \textsc{Dec 2005}    & Awarded \textbf{Overall Best Student} for displaying all round excellence. \\
     \textsc{2000-2009}   & Recipient of \textbf{Scholastic Excellence} awards for exemplary academic performance throughout
                             2$^{nd}$ to 12$^{th}$ grade. \\
