--- a/cv.tex
+++ b/cv.tex
@@ -126,7 +126,7 @@
 }
 
 \newcommand{\itemlist}[1]{
-    \begin{tabular}{>{\raggedleft}p{1.5cm}p{0.9\linewidth}}
+    \begin{tabular}{>{\raggedleft}p{1.6cm}p{0.9\linewidth}}
         #1
     \end{tabular}
 }
@@ -186,14 +186,17 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
 
 \begin{tabular}{>{\raggedleft}p{1.5cm}p{15.5cm}r}
 
-    \textsc{Current} & B. Tech in \textsc{Computer Science and Engineering} &   9.5/10.0\\
-                     & \textbf{Indian Institute of Technology}, Kanpur\\
+    \textsc{Current} & B. Tech in \textsc{Computer Science and Engineering},
+                       \textbf{Indian Institute of Technology}, Kanpur
+                     &   9.5/10.0\\
 
-    \textsc{July 2011} & 12$^{th}$ Board, \textsc{CBSE} Board                    &   91.4\% \\
-                       & \normalsize\textbf{The Emerald Heights International School}, Indore\\
+    \textsc{July 2011} & 12$^{th}$ Board, \textsc{CBSE} Board,
+                         \normalsize\textbf{The Emerald Heights International School}, Indore
+                       &   91.4\% \\
 
-    \textsc{July 2011} & 10$^{th}$ Board, \textsc{ICSE} Board                    &   95.4\% \\
-                       & \normalsize\textbf{The Laurels School International}, Indore \\
+    \textsc{July 2011} & 10$^{th}$ Board, \textsc{ICSE} Board,
+                         \normalsize\textbf{The Laurels School International}, Indore
+                       &   95.4\% \\
 
 \end{tabular}
 
@@ -226,15 +229,10 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
     \textsc{2011-2012}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
     \textsc{Jan 2010}    & Qualified \textbf{Regional Mathematics Olympiad} (RMO) \\
     \textsc{May 2011}    & Secured All India rank \textbf{1937} in Joint Entrance Exam (JEE) \\
-    \textsc{Sep 2010}    & \textbf{AIR 17} in \textbf{Technothlon} (Techniche) conducted by Indian Institute of Technology Guwahati. \\
-    \textsc{Jun 2010}    & Earned \textbf{Top Scorer in English} by \textbf{Laurels School International} in ICSE 2009. \\
-    \textsc{Dec 2009}    & Awarded \textbf{Overall Best Student} for displaying all round excellence. \\
+    \textsc{2009, 2005}  & Awarded \textbf{Overall Best Student} for displaying all round excellence. \\
     \textsc{Dec 2008}    & Secured All India Rank 297 in FIITJEE Talent Reward Examination. \\
-    \textsc{Dec 2005}    & Awarded \textbf{Overall Best Student} for displaying all round excellence. \\
     \textsc{2000-2009}   & Recipient of \textbf{Scholastic Excellence} awards for exemplary academic performance throughout
                             2$^{nd}$ to 12$^{th}$ grade. \\
-    \textsc{---}         & Achieved AIR \textbf{140 in 8th, 154 in 9th and 429 in 11th} National Cyber Olympiad;
-                            and AIR \textbf{57 in 9th} National Science Olympiad.\\
 }
 
 
@@ -290,9 +288,9 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
 %----------------------------------------------------------------------------------------
 %  COURSE PROJECTS
 %----------------------------------------------------------------------------------------
- \section{Course Projects}
- \let\thefootnote\relax\footnote{Monsoon semester: July to November}
- \let\thefootnote\relax\footnote{Winter Semester: January to April}
+\let\thefootnote\relax\footnote{Monsoon semester: July to November}
+\let\thefootnote\relax\footnote{Winter Semester: January to April}
+\section{Course Projects}
 
 \cproject
     {Monsoon 2014-2015}
@@ -358,24 +356,18 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
       \end{itemize}
     }
 
-\scproject
+\cproject
     {Monsoon 2013-2014}
-    {P2P File Sharing and Streaming}
+    {P2P File Sharing and Streaming and IP Spoofing}
     {\textsc{Computer Networks}, Professor Dheeraj Sanghi}
     { \href{https://github.com/srijanshetty/nodesock}{ \footnotesize{[Repository]} } }
     {
-         Conceived and implemented a peer-to-peer protocol for file and media transfer in Node.js to share
-         data over the institute LAN.
-    }
-
-\scproject
-    {Monsoon 2013-2014}
-    {IP Spoofing}
-    {\textsc{Computer Networks}, Professor Dheeraj Sanghi}
-    {}
-    {
-          Generated raw IP packets with spoofed IP addresses to exploit test machines with ARP Poisoning,
-          Smurfing and SYN Flooding.
+        \begin{itemize}[leftmargin=0.5cm]
+            \item Conceived and implemented a peer-to-peer protocol for file and media transfer in Node.js to share
+                data over any LAN.
+            \item Generated raw IP packets with spoofed IP addresses to exploit test machines with ARP Poisoning,
+                Smurfing and SYN Flooding.
+        \end{itemize}
     }
 
 \cproject
@@ -456,26 +448,10 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
               \begin{itemize}[leftmargin=0.5cm]
                   \item Conceptualized the idea of VANI - an extensible student community platform consisting
                       of a Student Wiki, Forums, Community Search, Calendar and Lost and Found.
-                  \item Developed the Lost and Found module using \textbf{Drupal} for VANI.
-                  \item Conducted sessions on the extending VANI to create rich applications.
+                  \item Developed the Lost and Found module using \textbf{Drupal}
+                      and conducted sessions on the extending VANI to create rich applications.
               \end{itemize}
           }
-
-\projectlist {Projects on Github}
-             {
-                 \begin{itemize}[leftmargin=0.5cm]
-                     \item \textbf{Dotfiles}: an opinionated work flow on Linux Systems.
-                         \href{https://github.com/srijanshetty/dotfiles} {https://github.com/srijanshetty/dotfiles}
-                     \item \textbf{Prezto}: a fork of the Prezto ZSH framework
-                         \href{https://github.com/srijanshetty/prezto} {https://github.com/srijanshetty/prezto}
-                     \item \textbf{DS}: implementation of certain algorithms and data structures
-                         \href{https://github.com/srijanshetty/DS} {https://github.com/srijanshetty/DS}
-                     \item \textbf{Custom}: handy configurations and shortcuts for ZSH
-                         \href{https://github.com/srijanshetty/custom} {https://github.com/srijanshetty/custom}
-                     \item \textbf{Notes}: notes on computing and social sciences.
-                         \href{https://github.com/srijanshetty/notes} {https://github.com/srijanshetty/notes}
-                 \end{itemize}
-             }
 
 \projectlist {Web Development}
              {
@@ -484,6 +460,20 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
                          \href{https://github.com/srijanshetty/udghosh-final}{https://github.com/srijanshetty/udghosh-final}
                      \item \textbf{ALI}: Antaragni Leadership Initiative.
                          \href{http://www.antargni.in/ali} {http://www.antargni.in/ali}
+                 \end{itemize}
+             }
+
+\projectlist {Projects on Github}
+             {
+                 \begin{itemize}[leftmargin=0.5cm]
+                     \item \textbf{DS}: implementation of certain algorithms and data structures
+                         \href{https://github.com/srijanshetty/DS} {https://github.com/srijanshetty/DS}
+                     \item \textbf{Notes}: notes on computing and social sciences.
+                         \href{https://github.com/srijanshetty/notes} {https://github.com/srijanshetty/notes}
+                     \item \textbf{Dotfiles}: an opinionated work flow on Linux Systems.
+                         \href{https://github.com/srijanshetty/dotfiles} {https://github.com/srijanshetty/dotfiles}
+                     \item \textbf{Bash Scripts}: handy configurations and shortcuts for ZSH
+                         \href{https://github.com/srijanshetty/custom} {https://github.com/srijanshetty/custom}
                  \end{itemize}
              }
 
@@ -520,10 +510,8 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
                     \item Coordinated the conduction of fifty competitions and nine major events with a team comprising of over
                         thousand volunteers.
                     \item Oversaw the hospitality arrangements of the 1800 participants.
-                    \item Initiated and organized Mr. \& Ms. Fresher's competition as an Antaragni Initiative for the freshmen.
-                    \item Introduced Choreo Nite to the arsenal of competitions held in Antaragni.
-                    \item Promoted Road Safety as a part of the social campaign of Antaragni -- Zara Sambhal Ke by conducting
-                        public polls and spreading general awareness about the same.
+                    \item Initiated and organized Mr. \& Ms. Fresher's and Choreo Nite to the arsenal of competitions
+                        held in Antaragni.
                     \item Publicized Antaragni on social media platforms by contributing creative content.
                \end{itemize}
           }
@@ -533,8 +521,6 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
           {
                \begin{itemize}[leftmargin=0.5cm]
                    \item Overhauled the methodology of inviting colleges all around the country by calling college societies over college cultural unions.
-                   \item Worked with a team of five fellow coordinators in planning the accommodation of 1500 participants.
-                   \item Charted the logistics for the hospitality of \textbf{1500 participants}.
                    \item Chalked out the logistics of the hospitality and accommodation of \textbf{1500 participants} with my fellow coordinators.
                    \item Helmed a team of 40 secretaries and 80 volunteers tasked with ensuring a flawless conduction of the festival.
                    \item Handled security during the four days of the Festival from 24$^{th}$ to 27$^{th}$ October.
@@ -588,11 +574,11 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
           {Professor Bhaskar Das Gupta}
           {
                \begin{itemize}[leftmargin=0.5cm]
-                   \item A brainchild of \textbf{Professor Bhaskar Das Gupta}, English Proficiency Programme tries to impart a functional
-                       knowledge of English to students.
-                   \item Worked as a English tutor in the pilot programme to help under-privileged students from and around IIT Kanpur campus.
-                   \item Organized the second phase of the programme, aimed at school teachers by meetings principals from schools in and
-                       around IIT Kanpur.
+                   \item A brainchild of \textbf{Professor Bhaskar Das Gupta}, English Proficiency Programme
+                       tries to impart a functional knowledge of English to students.
+                   \item Worked as a English tutor in the pilot programme to help under-privileged students from
+                       and around IIT Kanpur campus; and helped in the conduction of second phase of the project
+                       aimed at school teachers in nearby schools.
                \end{itemize}
           }
 
