Work Experience Aurus

--- a/cv.tex
+++ b/cv.tex
@@ -277,9 +277,11 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
       {Software Development at \textsc{Aurus Networks'}, Bangalore}
       {
           \begin{itemize}[leftmargin=*]
-              \item Ported the legacy flash based web player in \textbf{CourseHub} --- Aurus Networks' MOOC offering --- to a technology agnostic
-                  \textbf{HTML5/JavaScript} web player leading to a uniform cross-platform viewing experience.
-              \item Developed a \textbf{XMPP} based \textbf{real-time chat service} using Jabber framework, for conversations during live lectures.
+              \item Ported the legacy flash based web player in \textbf{CourseHub} --- Aurus Networks'
+                  MOOC offering --- to a technology agnostic \textbf{HTML5/JavaScript} web player leading
+                  to a uniform cross-platform viewing experience.
+              \item Developed a \textbf{XMPP} based \textbf{real-time chat service} using Jabber framework,
+                  for conversations during live lectures.
               \item Engineered an extensible Jabber framework for real-time communications between different services.
           \end{itemize}
       }
