--- a/cv.tex
+++ b/cv.tex
@@ -429,8 +429,8 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
 \siproject {August 2013}
            {ShuffleRun}
            {
-               Pitched ShuffleRun --- a music player which selects tracks on the basis of the user's running speed to receive
-               and honourable mention at \textbf{Yahoo! HackU 2013}.  \href{https://github.com/srijanshetty/ShuffleRun} {[Repository]}
+               Pitched ShuffleRun --- a music player which selects tracks on the basis of the user's running speed;
+               recieved honourable mention at \textbf{Yahoo! HackU 2013}.  \href{https://github.com/srijanshetty/ShuffleRun} {[Repository]}
            }
 
 \siproject {Summer 2012}
@@ -453,16 +453,6 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
                       and conducted sessions on the extending VANI to create rich applications.
               \end{itemize}
           }
-
-\projectlist {Web Development}
-             {
-                 \begin{itemize}[leftmargin=0.5cm]
-                     \item \textbf{Udghosh}: The annual sports-fest of IIT Kanpur.
-                         \href{https://github.com/srijanshetty/udghosh-final}{https://github.com/srijanshetty/udghosh-final}
-                     \item \textbf{ALI}: Antaragni Leadership Initiative.
-                         \href{http://www.antargni.in/ali} {http://www.antargni.in/ali}
-                 \end{itemize}
-             }
 
 \projectlist {Projects on Github}
              {
