--- a/cv.tex
+++ b/cv.tex
@@ -468,25 +468,36 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
                  \end{itemize}
              }
 
+\projectlist {Web Development}
+             {
+                 \begin{itemize}[leftmargin=0.5cm]
+                     \item \textbf{Udghosh}: The annual sports-fest of IIT Kanpur.
+                         \href{https://github.com/srijanshetty/udghosh-final}{https://github.com/srijanshetty/udghosh-final}
+                     \item \textbf{ALI}: Antaragni Leadership Initiative.
+                         \href{http://www.antargni.in/ali} {http://www.antargni.in/ali}
+                 \end{itemize}
+             }
+
+
 %----------------------------------------------------------------------------------------
 %   OTHER SKILLS
 %----------------------------------------------------------------------------------------
 
 \section {Social, Leadership and Artistic Skills}
 
-\skill {}
+\skill {\href{srijanshetty.quora.com} {[Blog]}}
        {Active blogger at \href{srijanshetty.quora.com} {srijanshetty.quora.com}}
 
-\projectlist {Hacker, Navya, FOSS Group IIT Kanpur}
-             {
-                   \begin{itemize}[leftmargin=0.5cm]
-                       \item Navya is the resident Free and Open Source Software Group of IIT Kanpur.
-                       \item Promoted the FOSS initiative in campus by organizing student lectures and meet-ups.
-                       \item Built student-centric applications like Course Search and Student Search, to circumvent
-                           their legacy institute counterparts.
-                       \item \href{https://github.com/navya} {https://github.com/navya}
-                   \end{itemize}
-             }
+\iproject {\href{https://github.com/navya} {[Github]} }
+          {Hacker, Navya, FOSS Group IIT Kanpur}
+          {
+               \begin{itemize}[leftmargin=0.5cm]
+                   \item Navya is the resident Free and Open Source Software Group of IIT Kanpur.
+                   \item Promoted the FOSS initiative in campus by organizing student lectures and meet-ups.
+                   \item Built student-centric applications like Course Search and Student Search, to circumvent
+                       their legacy institute counterparts.
+               \end{itemize}
+          }
 
 \iproject {2014}
           {Head, Major Events and Competitions, Antaragni '14}
@@ -500,8 +511,7 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
                         of \textbf{Dream On} campaign.
                     \item Coordinated the conduction of fifty competitions and nine major events with a team comprising of over
                         thousand volunteers.
-                    \item Oversaw the hospitality arrangements of the 1800 participants.
-                    \item Initiated and organized Mr. \& Ms. Fresher's and Choreo Nite to the arsenal of competitions
+                    \item Initiated and organized Mr. \& Ms. Fresher's; and Choreo Nite to the arsenal of competitions
                         held in Antaragni.
                     \item Publicized Antaragni on social media platforms by contributing creative content.
                \end{itemize}
@@ -589,10 +599,10 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
           {
                \begin{itemize}[leftmargin=0.5cm]
                    \item Organized a blood donation camp for the residents of IIT Kanpur.
-                   \item Mobilized information about road safety through posters, infographics and questionnaires
+                   \item Mobilized information about road safety through infographics and questionnaires
                        via Antaragni's nation wide social campaign \textbf{Zara Sambhal Ke}.
-                   \item Organized a Respect March on the 15$^{th}$ of August in honour of the sacrifices made by our
-                       freedom fighters and to instil patriotism in the residents of IIT Kanpur.
+                   \item Organized a Respect March on the 15$^{th}$ of August, to infuse a sense of patriotism
+                       on the occassion of Indian Independence day.
                \end{itemize}
           }
 
