--- a/cv.tex
+++ b/cv.tex
@@ -549,7 +549,7 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
        {Basic training in \textbf{Indian Classical Music}. (Prayag Sangeet Samiti Allahabad).}
 
 \skill {2005 -- 2006}
-       {House Captain, Einstein House.}
+       {House Captain}
 
 %----------------------------------------------------------------------------------------
 %   COMMUNITY SERVICE
