--- a/cv.tex
+++ b/cv.tex
@@ -564,7 +564,7 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
                    \item Appointed as a member of the Institute Anti Ragging Committee, a 10 member committee responsible
                        for welfare of the newly admitted freshmen.
                    \item Worked in tandem with the office of the Dean of Student Affairs, to organize sessions
-                       on easing the transition of freshmen to college life.
+                       on easing the transition of freshmen.
                    \item Ensured institute norms regarding humane treatment of freshmen are properly conveyed to all senior batches
                        and worked towards the enforcement of those norms.
                \end{itemize}
