--- a/cv.tex
+++ b/cv.tex
@@ -289,8 +289,8 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
 %----------------------------------------------------------------------------------------
 %  COURSE PROJECTS
 %----------------------------------------------------------------------------------------
-\let\thefootnote\relax\footnote{Monsoon semester: July to November}
-\let\thefootnote\relax\footnote{Winter Semester: January to April}
+% \let\thefootnote\relax\footnote{Monsoon semester: July to November}
+% \let\thefootnote\relax\footnote{Winter Semester: January to April}
 \section{Course Projects}
 
 \cproject
@@ -404,7 +404,6 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
     {
            Developed a python based web crawler to crawl paper submission deadlines for a given paper using BeautifulSoup and
            urllib.
-
     }
 
 %----------------------------------------------------------------------------------------
